--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 footer {
     position: absolute;
-    bottom: 0 ;
+    bottom: 0;
     width: 100%;
     height: 100px;
 }
@@ -12,4 +12,11 @@ footer {
     justify-content: space-around;
     align-items: center;
     padding: 5%;
+}
+
+#alertMsg {
+    text-align: center;
+    padding-top: 20px;
+    color: aquamarine;
+    font-size: 1, 2rem; 
 }
